Issue not really fixed, but don't overflow #68

--- a/src/frontend/src/app/home-page/popups/profil/profil.component.css
+++ b/src/frontend/src/app/home-page/popups/profil/profil.component.css
@@ -7,8 +7,11 @@
   height: 100%;
   color: white;
   font-size: 20px;
+}
 
-  background-color: blue;
+.test {
+  height: 100%;
+  width: 100%;
 }
 
 /* Header */
